--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -53,6 +53,10 @@
   margin-bottom: 10px;
 }
 
+.user-component__time--done {
+  margin-bottom: 25px;
+}
+
 .between-space {
   margin-bottom: 20px;
 }
