--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -9,19 +9,20 @@
   border: none;
   font-size: 18px;
   margin-bottom: 25px;
+  background-color: var(--red);
 }
 
 #login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid var(--yellow);
   transition: border-color 0.3s ease-in-out;
 }
 
 #login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
+  color: var(--yellow);
 }
 
 #login-form input:focus {
-  border-color: var(--yellow);
+  border-bottom: 4px solid var(--yellow);
 }
 
 #login-form input[type="submit"] {
