--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,5 +1,5 @@
 .alt-header {
-  padding: var(--horizontal-space);
+  padding: 35px 25px 25px 25px;
   margin-bottom: 15px;
   display: flex;
   justify-content: center;
@@ -7,7 +7,7 @@
 }
 
 .alt-header__title {
-  font-size: 28px;
+  font-size: 25px;
   font-weight: 600;
 }
 
