--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -1,16 +1,19 @@
 #no-mobile {
   position: absolute;
   z-index: 99;
-  height: 100vh;
+  height: 110vh;
   width: 100vw;
   background-color: var(--yellow);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 32px;
   top: 0;
 }
-
+#no-mobile span {
+  margin: 10px 0;
+}
 @media screen and (max-width: 645px) {
   #no-mobile {
     display: none;
