--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,7 @@
 #chat-screen {
-  background-color: #abc1d1;
-  height: 500vh;
+  height: 80vh;
+  background: url(https://previews.123rf.com/images/pk55/pk551703/pk55170300110/74772240-%EC%9B%90%ED%99%9C%ED%95%9C-%EB%8B%A4%EC%B1%84%EB%A1%9C%EC%9A%B4-%EB%B9%85%ED%86%A0%EB%A6%AC%EC%95%84-%EB%B2%BD%EC%A7%80%EC%9E%85%EB%8B%88%EB%8B%A4-.jpg);
+  background-size: cover;
 }
 
 #chat-screen .status-bar {
@@ -12,8 +13,8 @@
   width: 100%;
   box-sizing: border-box;
   top: 0;
-  background-color: #abc1d1;
   z-index: 1;
+  background-color: rgb(255, 255, 255, 0.8);
 }
 
 @keyframes fadeIn {
@@ -28,7 +29,8 @@
 }
 
 .main-chat {
-  margin-top: 180px;
+  margin-top: 90px;
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,6 +44,7 @@
   border-radius: 25px;
   font-size: 14px;
   margin-bottom: 25px;
+  margin-top: 50px;
 }
 
 .message-row {
@@ -87,7 +90,7 @@
 }
 
 .message-row--own .message-row__bubble {
-  background-color: var(--yellow);
+  background-color: #db9c5e;
   border-top-right-radius: 0;
   border-top-left-radius: 15px;
   margin-right: 0;
@@ -96,6 +99,10 @@
 
 .message-row--own .message-row__info {
   flex-direction: row-reverse;
+}
+
+.message-row__content--sametime {
+  margin-left: 65px;
 }
 
 .reply {
@@ -146,7 +153,7 @@
 }
 
 .reply__column button {
-  background-color: var(--yellow);
+  background-color: #db9c5e;
   border: none;
   width: 30px;
   height: 30px;
