--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -8,14 +8,7 @@
 .recommended-friends__title {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.5);
-}
-
-.recommended-friends span {
-  display: block;
-  margin: 100px 0px;
-  color: rgba(0, 0, 0, 0.5);
-  font-size: 18px;
-  text-align: center;
+  margin-bottom: 20px;
 }
 
 .open-chat__header {
@@ -33,6 +26,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 25px;
+}
+
+.open-post:last-child {
   margin-bottom: 80px;
 }
 
@@ -83,6 +80,7 @@
   width: 120px;
   height: 120px;
   border-radius: 10px;
+  object-fit: cover;
 }
 
 .open-post__heart-count {
