--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Otomanopee+One&family=Raleway:ital,wght@1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap");
 @import "reset.css";
 @import "variables.css";
 /* 순서가 매우 중요 */
@@ -25,7 +25,8 @@
 
 body {
   color: #2e363e;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Oxygen", sans-serif;
+  background-color: var(--red);
 }
 .welcome-header {
   margin: 90px 0px;
@@ -37,11 +38,13 @@ body {
 
 .welcome-header__title {
   margin-bottom: 20px;
-  font-size: 25px;
+  font-size: 35px;
+  color: var(--yellow);
 }
 .welcome-header__text {
   width: 60%;
   opacity: 0.7;
+  color: var(--yellow);
 }
 
 .main-screen {
