--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -24,11 +24,11 @@
 .friends-screen__channel {
   margin-top: 25px;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
-  padding-top: 15px;
+  padding-top: 10px;
 }
 
 .friends-screen__channel-header {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: space-between;
   color: rgba(0, 0, 0, 0.5);
@@ -49,6 +49,7 @@
 
 #splash-screen img {
   height: 82%;
+  will-change: opacity;
 }
 
 @keyframes hideSplashScreen {
