--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -60,3 +60,18 @@
 .between-space {
   margin-bottom: 20px;
 }
+
+.user-component:hover {
+  animation: user-component__moving 0.5s ease-in-out forwards;
+}
+
+@keyframes user-component__moving {
+  from {
+    transform: none;
+  }
+
+  to {
+    transform: scale(1.05);
+    transform: translateX(10px);
+  }
+}
