--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -32,6 +32,10 @@
   border-radius: 5px;
 }
 
+#login-form input[type="submit"]:active {
+  background-color: green;
+}
+
 #login-form a {
   text-align: center;
   text-decoration: none;
