--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -30,7 +30,7 @@
 
 .main-chat {
   margin-top: 90px;
-  padding: 50px 0;
+  padding-bottom: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -103,6 +103,11 @@
 
 .message-row__content--sametime {
   margin-left: 65px;
+  margin-bottom: 50px;
+}
+
+.message-row__time--sametime {
+  opacity: 0;
 }
 
 .reply {
