--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -27,6 +27,22 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 25px;
+  box-sizing: border-box;
+}
+
+.open-post:hover {
+  animation: open-post-ani 0.3s ease-in-out forwards;
+}
+
+@keyframes open-post-ani {
+  from {
+    transform: none;
+  }
+
+  to {
+    border: solid white 1px;
+    border-radius: 10px;
+  }
 }
 
 .open-post:last-child {
