--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -25,6 +25,7 @@
   margin-top: 25px;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   padding-top: 10px;
+  padding-bottom: 70px;
 }
 
 .friends-screen__channel-header {
@@ -48,7 +49,7 @@
 }
 
 #splash-screen img {
-  height: 82%;
+  height: 62%;
   will-change: opacity;
 }
 
