--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
   background-color: var(--red);
 }
 .welcome-header {
-  margin: 90px 0px;
+  margin: 60px 0px;
   text-align: center; /*가운데정렬*/
   display: flex;
   flex-direction: column;
@@ -38,9 +38,17 @@ body {
 
 .welcome-header__title {
   margin-bottom: 20px;
-  font-size: 35px;
+  font-size: 25px;
   color: var(--yellow);
 }
+
+.welcome-header__title-second {
+  margin-bottom: 20px;
+  font-size: 40px;
+  color: white;
+  animation: welcome-header__title-second-ani 2s linear infinite;
+}
+
 .welcome-header__text {
   width: 60%;
   opacity: 0.7;
@@ -49,4 +57,22 @@ body {
 
 .main-screen {
   padding: 0px var(--horizontal-space);
+}
+
+@keyframes welcome-header__title-second-ani {
+  0% {
+    transform: none;
+  }
+
+  25% {
+    transform: translateX(-10px);
+  }
+
+  75% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: none;
+  }
 }
