--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -39,6 +39,7 @@
 
 .user-component__title--not-bold {
   font-weight: 400;
+  font-size: 20px;
 }
 
 .user-component__column:last-child {
@@ -74,4 +75,27 @@
     transform: scale(1.05);
     transform: translateX(10px);
   }
+}
+.user-component__column--profile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
+  border: var(--yellow) dotted 1px;
+  border-radius: 30px;
+}
+
+.user-component__column--profile__music div:first-child {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.user-component__column--profile__music div:last-child {
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.user-component__column--profile i {
+  margin-right: 5px;
+  animation: rotateCog 1s linear infinite;
 }
