--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
   height: 80vh;
-  background: url(https://previews.123rf.com/images/pk55/pk551703/pk55170300110/74772240-%EC%9B%90%ED%99%9C%ED%95%9C-%EB%8B%A4%EC%B1%84%EB%A1%9C%EC%9A%B4-%EB%B9%85%ED%86%A0%EB%A6%AC%EC%95%84-%EB%B2%BD%EC%A7%80%EC%9E%85%EB%8B%88%EB%8B%A4-.jpg);
+  background: url(https://us.123rf.com/450wm/pk55/pk551703/pk55170300122/75389985-%EA%B7%80%EC%97%AC%EC%9A%B4-%EC%9B%90%ED%99%9C%ED%95%9C-%EB%B9%85%ED%86%A0%EB%A6%AC%EC%95%84-%EB%B2%BD%EC%A7%80%EC%9E%85%EB%8B%88%EB%8B%A4-.jpg?ver=6);
   background-size: cover;
 }
 
